# bare-metal-idris-drivers

./: CMakeLists.txt  README.md  drivers.ipkg  stwf-ffi.ipkg
BareMetal/: BitHandler.idr  GPIO.idr  HwCmPer.idr  HwGPIO.idr  SocAM335x.idr  Utils.idr
StwfFFI/: GPIO.idr  Utils.idr
impure/: CMakeLists.txt  bithandler.c  bithandler.h  busywait.c  busywait.h
